# CloudyBack/Kjkardum.CloudyBack.Application/UseCases/Postgres/Commands/AddDatabaseExtension/AddPostgresDatabaseExtensionCommandHandler.cs
@@ -1,37 +1,46 @@
 using ApiExceptions.Exceptions;
 using Kjkardum.CloudyBack.Application.Clients;
 using Kjkardum.CloudyBack.Application.Repositories;
+using Kjkardum.CloudyBack.Domain.Entities;
 using MediatR;
 using Microsoft.Extensions.Logging;
 
 namespace Kjkardum.CloudyBack.Application.UseCases.Postgres.Commands.AddDatabaseExtension;
 
 public class AddPostgresDatabaseExtensionCommandHandler(
-    IPostgresServerResourceRepository postgresServerRepository,
+    IPostgresDatabaseResourceRepository postgresDatabaseResourceRepository,
     IPostgresServerClient postgresServerClient,
+    IBaseResourceRepository baseResourceRepository,
     ILogger<AddPostgresDatabaseExtensionCommandHandler> logger) : IRequestHandler<AddPostgresDatabaseExtensionCommand>
 {
     public async Task Handle(AddPostgresDatabaseExtensionCommand request, CancellationToken cancellationToken)
     {
-        var resource = await postgresServerRepository.GetById(request.ServerId);
+        var resource = await postgresDatabaseResourceRepository.GetById(request.DatabaseId);
         if (resource == null)
         {
-            throw new EntityNotFoundException($"Postgres server with ID {request.ServerId} not found.");
+            throw new EntityNotFoundException($"Postgres database with ID {request.DatabaseId} not found.");
         }
 
         // Run the command to add the extension
         var resultMsg = await postgresServerClient.RunQueryAsync(
-            resource.Id,
-            resource.SaUsername,
-            resource.SaPassword,
-            "postgres",
+            resource.PostgresDatabaseServerResourceId,
+            resource.PostgresDatabaseServerResource!.SaUsername,
+            resource.PostgresDatabaseServerResource!.SaPassword,
+            resource.Name,
             null,
             $"CREATE EXTENSION IF NOT EXISTS \"{request.ExtensionName}\";");
 
+        await baseResourceRepository.LogResourceAction(new AuditLogEntry
+            {
+                ActionName = nameof(AddPostgresDatabaseExtensionCommand),
+                ActionDisplayText = $"Added extension '{request.ExtensionName}' to Postgres database '{resource.Name}'",
+                ResourceId = request.DatabaseId,
+            });
+
         logger.LogInformation(
-            "Try add extension '{ExtensionName}' to Postgres server {ServerId}. Result: {ResultMsg}",
+            "Try add extension '{ExtensionName}' to Postgres database {ServerId}. Result: {ResultMsg}",
             request.ExtensionName,
-            request.ServerId,
+            request.DatabaseId,
             resultMsg);
     }
 }
